--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Harry Potter and the performance metrics</title>
   <script src="send.js"></script>
 
@@ -10,6 +11,12 @@
           padding: 20px 50px;
           max-width: 1024px;
           margin: 0 auto;
+      }
+
+      @media (max-width: 767px) {
+          body {
+              padding: 20px;
+          }
       }
 
       h1 {
