fix link to analytics

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <img src="imgs/lynx.jpg" class="offset vertical" alt="Lynx">
 <p style="text-align: center">Дратути</p>
 
-<a href="/analytics.html">
+<a href="/analytics">
   <img src="imgs/cheesecake.jpg" class="offset big" alt="Cheesecake">
 </a>
 <p>Спасибо, что были с нами! Вы котик 💜</p>
