fix metric name

--- a/analytics.html
+++ b/analytics.html
@@ -175,7 +175,7 @@
       showMetricByPeriod(data, 'kitties', 'scroll-to-bottom', '2021-07-09', today);
       compareMetricByPlatform(data, 'kitties', 'scroll-to-bottom');
       compareMetricByWeekday(data, 'kitties', 'scroll-to-bottom');
-      getCoverage(data, 'scroll-full');
+      getCoverage(data, 'scroll-to-bottom');
 
       showSession(data, 'kitties', '386901939889');
     });
