change first pic

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <p>Спасибо, что зашли. Меня зовут Аня, это мой маленький учебный проект.</p>
 <p>Обмениваю фотки котиков на ваши целевые действия на этой страничке. Поехали)</p>
 <button id="gimme-cat">Дайте котика!</button>
-<img src="imgs/shrimp.jpg" class="hidden" id="hidden-img" alt="Night">
+<img src="imgs/shiffa.jpg" class="hidden" id="hidden-img" alt="Shiffa">
 
 <p class="hidden" id="hidden-text" style="text-align: center">Там внизу есть еще, скролль 🢃</p>
 
